# llm-zoomcamp-2026-code

./: README.md
CourseWork/:  persinsent_rag.ipynb  notebook.ipynb  pyproject.toml
CourseWork/module_01/: notebook.ipynb  rag_helper.py  sqlite-ingest.ipynb
CourseWork/module_02/: main.py  pyproject.toml  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
Homeworks/module_01/: main.ipynb  pyproject.toml  rag_helper.py
Homeworks/module_01/.ipynb_checkpoints/: main-checkpoint.ipynb
